version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/SolverData/MAPDLBeamData.rst.txt
.. vale off



:class:`MAPDLBeamData`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.SolverData.MAPDLBeamData

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLBeamData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ElementId`
            - Gets the Element number for the object.
          * - :py:attr:`~MaterialId`
            - Gets the Material Id number for the beam connection.
          * - :py:attr:`~RealConstantId`
            - Gets the Real Constant Id number for the object.







Property detail
---------------
.. py:property:: ElementId
   :type: Optional[int]


   
   Gets the Element number for the object.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialId
   :type: Optional[int]


   
   Gets the Material Id number for the beam connection.
















   ..
       !! processed by numpydoc !!

.. py:property:: RealConstantId
   :type: Optional[int]


   
   Gets the Real Constant Id number for the object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on